<resources>
    <string name="app_name">PhishApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phish_name">Phish App</string>
    <string name="lab_name">TCSS 450 Labs</string>
    <string name="register_btn">Register</string>
    <string name="login_btn">Log in</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_blog_post">Blog Post</string>
    <string name="nav_set_lists">Set Lists</string>
    <string name="full_post">Full Post</string>
    <string name="action_logout">Logout</string>
    <string name="nav_global_chat">Global Chat</string>
</resources>
