<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_blog_post"
            android:icon="@drawable/ic_blog_post"
            android:title="@string/nav_blog_post" />
        <item
            android:id="@+id/nav_set_lists"
            android:icon="@drawable/ic_set_list"
            android:title="@string/nav_set_lists" />
<<<<<<< HEAD
        <item
            android:id="@+id/nav_global_chat"
            android:icon="@drawable/ic_textsms_black_24dp"
            android:title="@string/nav_global_chat" />
=======
>>>>>>> bbd0136b073379a155b34495dd655067c50ad96c
    </group>



</menu>
